# Nexa_Vortex

./: Cargo.toml  DOC.md  README.md  commands.txt  plan.md  pyproject.toml
.github/workflows/: rust.yml
.github/workflows/CI/: CD.yml
benches/: work_queue_benchmark.rs
nexa_vortex/: __init__.py  message.py
nexa_vortex/core/: __init__.py  message.py
nexa_vortex/core/controlplane/: __init__.py
python/nexa_vortex/: __init__.py  control_plane.py  telemetry_manager.py
python/nexa_vortex/core/: __init__.py
python/nexa_vortex/core/controlplane/: __init__.py
python/nexa_vortex/core/telemetry/: __init__.py
python/tests/: test_core.py
rust/vortex_core/: Cargo.toml
rust/vortex_core/src/: allocator.rs  cpu_dispatch.rs  errors.rs  hw_profile.rs  kernel_registry.rs  lib.rs  telemetry.rs
src/: cpu_dispatch.rs  errors.rs  lib.rs
src/integrations/: mesocarp_wrapper.rs  mod.rs
tests/: queue_integration.rs  test_core.py
