[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nexa-vortex"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# The name of the rust crate to be compiled
# This should be located at `nexa_vortex/vortex_core`
module-name = "nexa_vortex._vortex_core"

[package]
name = "nexa-vortex"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexa_vortex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
