[package]
name = "vortex_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_vortex_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
sysinfo = "0.29"
thiserror = "1.0"
chrono = "0.4"
# Mesocarp optional dependency (path must be adjusted to your repo layout)
# This path assumes mesocarp is in a `third_party` dir at the project root
mesocarp = { path = "../../../third_party/mesocarp", optional = true }

[features]
default = []
mesocarp_integration = ["mesocarp"]
